<resources>
    <string name="app_name">CarCamera</string>
    <string name="text_title_login">Вход</string>
    <string name="input_email">Электронная почта</string>
    <string name="input_password">Пароль</string>
    <string name="button_description_setting">Настройки</string>
    <string name="button_text_login">Войти</string>
    <string name="button_text_goRegister">Регистрация</string>
    <string name="text_title_register">Регистрация</string>
    <string name="input_confirm_password">Подтверждние пароля</string>
    <string name="button_text_register">Зарегистрироваться</string>
    <string name="button_text_goLogin">Вход</string>
    <string name="text_title_welcome">Добро пожаловать!</string>
    <string name="button_description_back">Назад</string>
    <string name="button_description_scan">"Скарировать "</string>
    <string name="text_title_home">Главная</string>
    <string name="text_licensePlate">Номер машины</string>
    <string name="text_shortInfo">Краткая информация</string>
    <string name="button_description_manualinput">Ручной ввод</string>
    <string name="text_permission_camera">Не предоставлено разрешение камеры</string>
    <string name="text_scanning_in_progress">Сканирование...</string>
    <string name="text_title_result">Результат</string>
    <string name="button_description_refresh">Продолжить сканирование</string>
    <string name="rus" translatable="false">RUS</string>
    <string name="image_description_flag">Флаг РФ</string>
    <string name="text_vehicle_not_found">Номер не найден</string>
    <string name="text_data_not_found">Информация не найдена</string>
    <string name="button_description_arrowForward">Въезд</string>
    <string name="text_note_title">Примичание</string>
    <string name="text_note" >Контент примечания</string>
    <string name="text_info_title">Информация</string>
    <string name="text_info">Контент информации</string>
    <string name="button_logout">Выйти</string>
    <string name="image_status_icon">Иконка статуса</string>
    <string name="button_description_retake">Заново</string>
    <string name="button_description_arrowForward_back">Выезд</string>
    <string name="button_delete">Удалить данные</string>
</resources>