<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android/tools"
    tools:context=".views.ResultFragment">

    <TextView
        android:id="@+id/text_title_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_title_result"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:contentDescription="@string/button_description_refresh"
        android:src="@drawable/ic_refresh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title_result">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_ratio"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:layout_constraintDimensionRatio="520:112"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:cardBackgroundColor="@android:color/white"
                app:strokeColor="@android:color/black"
                app:strokeWidth="4dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textLicensePlate"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/license_vehicle"
                        android:gravity="center"
                        android:textColor="@android:color/black"
                        android:textSize="60sp"
                        android:letterSpacing="0.1"
                        android:paddingTop="10dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/divider_card_ratio"
                        app:layout_constraintHorizontal_weight="70"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        android:maxLines="1"
                        android:singleLine="true"
                        tools:text="X481AT"
                        />

                    <View
                        android:id="@+id/divider_card_ratio"
                        android:layout_width="4dp"
                        android:layout_height="match_parent"
                        android:background="@android:color/black"
                        app:layout_constraintStart_toEndOf="@+id/textLicensePlate"
                        app:layout_constraintEnd_toStartOf="@+id/rightContainer"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/rightContainer"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        app:layout_constraintStart_toEndOf="@+id/divider_card_ratio"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintHorizontal_weight="30">

                        <TextView
                            android:id="@+id/textRegion"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:textSize="40sp"
                            android:textColor="@android:color/black"
                            app:layout_constraintHeight_percent="0.60"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:gravity="center"
                            android:fontFamily="@font/license_vehicle"
                            tools:text="178"

                            />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:id="@+id/bottom_section_layout"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            app:layout_constraintTop_toBottomOf="@+id/textRegion"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHeight_percent="0.40">

                            <TextView
                                android:id="@+id/text_rus"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:text="@string/rus"
                                android:textSize="20sp"
                                android:textColor="@android:color/black"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toStartOf="@+id/image_flag"
                                app:layout_constraintHorizontal_weight="1"
                                android:gravity="center"/>

                            <ImageView
                                android:id="@+id/image_flag"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:src="@drawable/ic_flag"
                                android:contentDescription="@string/image_description_flag"
                                android:scaleType="fitCenter"
                                android:scaleX="0.7"
                                android:scaleY="0.7"
                                android:background="@drawable/border_shape"
                                android:padding="1dp"
                                app:layout_constraintStart_toEndOf="@+id/text_rus"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_weight="1" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/card_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                app:cardCornerRadius="8dp"
                app:cardElevation="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_ratio">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="16dp">

                    <LinearLayout
                        android:id="@+id/icon_status_container"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:gravity="center"
                        android:background="@drawable/circle_background_orange"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <ImageView
                            android:id="@+id/image_status_icon"
                            android:layout_width="48dp"
                            android:layout_height="48dp"
                            android:contentDescription="@string/image_status_icon"
                            android:src="@drawable/ic_warning"
                            app:tint="@color/orange_status" />

                    </LinearLayout>

                    <View
                        android:id="@+id/divider_status_card"
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:background="@android:color/darker_gray"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        app:layout_constraintStart_toEndOf="@+id/icon_status_container"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/text_status_container"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toEndOf="@+id/divider_status_card"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">

                        <TextView
                            android:id="@+id/text_info_status"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:textColor="@android:color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            android:gravity="center"
                            tools:text="Ошибка" />

                        <TextView
                            android:id="@+id/text_info_type"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:textSize="14sp"
                            android:textColor="@android:color/black"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/text_info_status"
                            android:gravity="center"
                            tools:text="Тип информации" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </com.google.android.material.card.MaterialCardView>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/hidden_content_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_status">

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/text_info_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/text_info_title"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/text_info_content"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/text_info"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/text_info_title" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/card_note"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/card_info">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="16dp">

                        <TextView
                            android:id="@+id/text_note_title"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:text="@string/text_note_title"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <TextView
                            android:id="@+id/text_note"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/text_note"
                            android:textColor="@android:color/black"
                            android:textSize="14sp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@id/text_note_title" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </com.google.android.material.card.MaterialCardView>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>